name:                boxes
version:             0.1.4
synopsis:            2D text pretty-printing library
description:         A pretty-printing library for laying out text in
                     two dimensions, using a simple box model.
category:            Text
license:             BSD3
license-file:        LICENSE
extra-source-files:  CHANGES, README.md, include/boxes.h

author:              Brent Yorgey
maintainer:          David Feuer <David.Feuer@gmail.com>
build-type:          Simple
cabal-version:       >= 1.9.2
-- Minimum Cabal version supporting test suites

library
  build-depends:     base >= 3 && < 5, split >=0.2 && <0.3
  exposed-modules:   Text.PrettyPrint.Boxes
  extensions:        CPP
  include-dirs:      include

Test-Suite test-boxes
  type:              exitcode-stdio-1.0
  main-is:           Text/PrettyPrint/Tests.hs
  build-depends:     base >= 3 && < 5, split >=0.2 && <0.3, QuickCheck
  extensions:        CPP
  include-dirs:      include
  cpp-options:       -DTESTING
-- Export some internals so the tests can get at them

source-repository head
  type: git
  location: git://github.com/treeowl/boxes.git
