name:                boxes
version:             0.1.5
synopsis:            2D text pretty-printing library
description:         A pretty-printing library for laying out text in
                     two dimensions, using a simple box model.
category:            Text
license:             BSD3
license-file:        LICENSE
extra-source-files:  CHANGES, README.md, include/boxes.h

author:              Brent Yorgey
maintainer:          David Feuer <David.Feuer@gmail.com>
build-type:          Simple
cabal-version:       >= 1.9.2
-- Minimum Cabal version supporting test suites

library
  hs-source-dirs:    src
  build-depends:     base >= 3 && < 5, split >=0.2 && <0.3
  exposed-modules:   Text.PrettyPrint.Boxes
                   , Text.PrettyPrint.Boxes.Internal
  extensions:        CPP
  include-dirs:      include

Test-Suite test-boxes
  hs-source-dirs:    test
  type:              exitcode-stdio-1.0
  main-is:           Tests.hs
  build-depends:     base >= 3 && < 5, QuickCheck, boxes
  other-modules:     Definitions
  extensions:        CPP

source-repository head
  type: git
  location: https://github.com/treeowl/boxes.git
