name:               boxes
version:            0.1.5
synopsis:           2D text pretty-printing library
description:
  A pretty-printing library for laying out text in
  two dimensions, using a simple box model.

category:           Text
license:            BSD3
license-file:       LICENSE
extra-source-files:
  CHANGES
  README.md

author:             Brent Yorgey
maintainer:         David Feuer <David.Feuer@gmail.com>
build-type:         Simple
cabal-version:      >=1.10
tested-with:
  GHC ==7.0.4
   || ==7.2.2
   || ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.3

library
  default-language:   Haskell2010
  build-depends:      base >=4.3 && <5
  ghc-options:        -Wall

  if !impl(ghc >=8.0)
    build-depends: semigroups >=0.19.1 && <0.20

  exposed-modules:    Text.PrettyPrint.Boxes

test-suite test-boxes
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Text/PrettyPrint/Tests.hs
  ghc-options:        -Wall -fno-warn-orphans
  build-depends:
      base
    , QuickCheck >=2.14.2 && <2.15

  if !impl(ghc >=8.0)
    build-depends: semigroups

  default-extensions: CPP
  other-modules:      Text.PrettyPrint.Boxes

source-repository head
  type:     git
  location: https://github.com/treeowl/boxes.git
